sloved 404 error of page reload

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/logo-favicon.png" />
     <title>BuiltLine Construction | Build Right. Live Smart.</title>
     <meta name="description" content="BuiltLine Construction - Premier construction company delivering quality residential, commercial, and industrial building projects. Build Right. Live Smart.">
     <meta name="author" content="BuiltLine Construction" />
